# mailboxdb

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  TODO.md  credentials.ini  credentials.ini.init  credentials.test.ini  docker-compose.yml  model.py  pyproject.toml  requirements.in  requirements.txt  ruff.toml  run.py  setup.py
app/: bootstrap.py  config.py  credentials.ini.init  imap.py  logger.py  model.py  process.py  requirements.txt  run.py  types.py
doc/: docker-dovecot.md
docker/: Dockerfile  Dockerfile.test_fixtures
mailboxdb/: bootstrap.py  config.py  imap.py  migrations.py  model.py  process.py  run.py  schema.py
migrations/: 0001_init.py
src/mailboxdb/: config.py  helpers.py  imap.py  imap_xoauth.py  logger.py  migrations.py  model.py  process.py  run.py  schema.py
src/migrations/: 0001_init.py
tests/: composeemail.py  test_config.py  uploadtestemail.py
tests/fixtures/: lorem_ipsum.txt
