[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Mailboxdb"
version = "0.4.1"
description = "Fetch emails from a mailbox and store them in a sqlite database"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["peewee~=3.18"]

[project.optional-dependencies]
dev = ["bumpver"]
tests = []

[tool.bumpver]
current_version = "0.4.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} → {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']

[tool.setuptools]
packages = ["mailboxdb"]
